# ChangeLog for net-proxy/dante
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/dante/ChangeLog,v 1.77 2014/07/13 09:58:21 ago Exp $

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> dante-1.4.0-r1.ebuild:
  Stable for ppc, wrt bug #506794

  22 Jun 2014; Chema Alonso <nimiux@gentoo.org> dante-1.4.0-r1.ebuild:
  Stable for amd64 wrt bug #506794

  15 Jun 2014; Akinori Hattori <hattya@gentoo.org> dante-1.4.0-r1.ebuild:
  ia64 stable wrt bug #506794

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> dante-1.4.0-r1.ebuild:
  x86 stable wrt bug #506794

  04 May 2014; Markus Meier <maekke@gentoo.org> dante-1.4.0-r1.ebuild:
  arm stable, bug #506794

  02 May 2014; Jeroen Roovers <jer@gentoo.org> dante-1.4.0-r1.ebuild:
  Stable for HPPA (bug #506794).

*dante-1.4.0-r1 (15 Feb 2014)

  15 Feb 2014; Pacho Ramos <pacho@gentoo.org> +dante-1.4.0-r1.ebuild,
  +files/dante-sockd.service:
  Add unit file (#500500)

  08 Jan 2014; Mike Frysinger <vapier@gentoo.org> dante-1.1.19-r4.ebuild,
  dante-1.3.2-r1.ebuild, dante-1.3.2.ebuild, dante-1.4.0.ebuild,
  dante-1.4.0_pre1-r1.ebuild, dante-1.4.0_pre1.ebuild:
  Inherit the user eclass for enewuser/etc...

*dante-1.4.0 (05 Jan 2014)

  05 Jan 2014; Robin H. Johnson <robbat2@gentoo.org> +dante-1.4.0.ebuild,
  +files/dante-1.4.0-cflags.patch, +files/dante-1.4.0-socksify.patch,
  +files/dante-1.4.0_pre1-osdep-format-macro.patch, dante-1.4.0_pre1-r1.ebuild,
  dante-1.4.0_pre1.ebuild, files/dante-1.4.0-osdep-format-macro.patch:
  Version bump; also restores upnp and libdsocks support.

  05 May 2013; Tom Wijsman <TomWij@gentoo.org> dante-1.1.19-r4.ebuild,
  dante-1.3.2-r1.ebuild, dante-1.3.2.ebuild, dante-1.4.0_pre1-r1.ebuild,
  dante-1.4.0_pre1.ebuild, metadata.xml:
  Replacing AM_CONFIG_HEADER by AC_CONFIG_HEADERS in configure.ac to support
  sys-devel/automake:1.13, fixes bug #468692 reported by Torsten Kaiser. Thanks