@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst prepare
+DEPEND=pam? ( virtual/pam ) kerberos? ( virtual/krb5 ) selinux? ( sec-policy/selinux-dante ) tcpd? ( sys-apps/tcp-wrappers ) userland_GNU? ( virtual/shadow ) upnp? ( net-libs/miniupnpc ) sys-devel/flex sys-devel/bison !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool virtual/pkgconfig
+DESCRIPTION=A free socks4,5 and msproxy implementation
+EAPI=5
+HOMEPAGE=http://www.inet.no/dante/
+IUSE=debug kerberos pam selinux static-libs tcpd upnp
+KEYWORDS=~alpha amd64 arm hppa ia64 ~m68k ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd
+LICENSE=BSD GPL-2
+RDEPEND=pam? ( virtual/pam ) kerberos? ( virtual/krb5 ) selinux? ( sec-policy/selinux-dante ) tcpd? ( sys-apps/tcp-wrappers ) userland_GNU? ( virtual/shadow ) upnp? ( net-libs/miniupnpc )
+SLOT=0
+SRC_URI=ftp://ftp.inet.no/pub/socks/dante-1.4.0.tar.gz
+_eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=f54f7a60911bcd740e1213550a44adbc
