@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX dante-1.1.19-libpam.patch 2688 SHA256 e78503cc9ece8347cfe0f11d77e0952bec9e2286dd1bea0916540f489d86ab54 SHA512 ae65a7d58e93b7e0f883c8194166e23fd378b27537fa4005dd1f751889d6bdf807bab3c09327b5b1348193dff2350b6483baac29ff652a5d2cbcc9f912842e01 WHIRLPOOL e9b8ee2651db965a1d1ac93529a240d83bb8ed8785382ea462f98cfed528a3831deb7585e907b8652911e05ce16edb815d91dc19e2fab637243402fc445e885b
 AUX dante-1.1.19-socksify.patch 811 SHA256 2e39a9cb13ae30eaf4129583dbd28d6df08133564aa679b81b5feb21532822d5 SHA512 2f5616e788de6764eec22a7f561be367b58c7b6d3420dab7fa9dee8204bf78cf5342e65b66df5cc02766c8a5454e932b72ea73d9d155d9062c0c4875e93dda30 WHIRLPOOL d6ed423f3ea2425cd138e9a675304cba5015624f6abb52572439500a18a24bfc1f04abe9df3182238733b38fb5787c80b99da9ff73fd2c475cfae4762bc87425
@@ -25,25 +25,26 @@ EBUILD dante-1.1.19-r4.ebuild 2390 SHA256 1d7bdb749a5438caa8d310a1b49f0487c003fd
 EBUILD dante-1.3.2-r1.ebuild 2208 SHA256 b49ea55b9931e114c715263fdf01ce16ca6a1a7d74ddbf158a65f908cf42e9b8 SHA512 0f0e9aba173eefba1a4bd157efbc0b60a0ffbb7665b9875b315267af44c92c6970c04724c5b70b45c653d106ac14c79d83c92c2ee30d1d4fba7591613f75d241 WHIRLPOOL 062500ccf1bf9fc522f135489425ff9c228d4515e6da9745c3f7e9f89de2d4daf6b27258ca852c51c9a94ee92527c194f965b6ea94d94216a91554646ea15e99
 EBUILD dante-1.3.2.ebuild 2206 SHA256 a2d6afa8cf11f3f7beda7ac789e4be0b81e785f1ef6b693b61abcc35ed8ad71c SHA512 900dc2c3d4ae6d4d59ce0e8cc45bc9c39a4dbc805bf250b8f25e55eb8e984100d6a040732af01ea615534b4c751be9c5f894ee18092d4d856f397d0fb0a92815 WHIRLPOOL 90c9d56507b934668de2f21a29f125dc5ed985b27a4700f6f5618d4314b8673b352d160c2e6e4cefcd1a22bc0cdd7ebc858cd8cf0693eb574294cc1b00617128
 EBUILD dante-1.4.0-r1.ebuild 2673 SHA256 72b5f5a09d8aa37f9a3d6cd052b3b5694527778fa88e03295806715ed389b409 SHA512 0e6c77902cc59d53d97731a5181a30958f341bbc74d21b591a59bcf0a643df5a4d5d7ddb98d92951de891a5b3d64d03124c3b707bc89b14f673f21ac2b1a7600 WHIRLPOOL 5a97b48ccf0d95a76456e8395ce116ce5f7e259ee2dda0cf0b06b407bcb7c476d17e6138ea10b64482e4afaadd5eb2dff4004f407ab2240db31158b286061a2e
+EBUILD dante-1.4.0-r2.ebuild 2705 SHA256 64f45bbca0da085402b4640764800c6da8b19e2af6b1495457fa98dce062090e SHA512 4a809f910f4f0befbae0a9f6192ff3e62185c8efb8b88ea95126ff0fb210e25ac795038177afb5fa48cfeee07f5933aeee6ca57f727c72bfeb313b8a17bf6ebd WHIRLPOOL 10c492348ef1762c2aa8872b50b590dcc1242a80ca845d9817ecccd83582320af64ae5351491464465dc5786b5216508f41d7031729107ce120e22738d5efaaf
 EBUILD dante-1.4.0.ebuild 2620 SHA256 63c1726d39830347f472857deb2fa2d57e4b53a0f3c1eb9d8e185f2ff4355486 SHA512 ed970158ab70acc120d19e064afc2d4330b7c35106c1b5bea8d2a7dcff2851802d437c8da5727fd6c3529eacdccaac1472575ad02385fd71f0edcb6ba5117354 WHIRLPOOL 17bf96cc1ca58a329ba25fc5e8181e31bed9ba783f5c8b4331b4747f86f7aa0648bcf94c9a18656996748350dc25e2eb1ab9b78eb8fbdd9a316a7e99ea29c374
 EBUILD dante-1.4.0_pre1-r1.ebuild 2277 SHA256 3824190c643244fc7ef27fdcdd965eb7e5a7d210ce7f2a9d9c14925d0efe8354 SHA512 90a3bc74ed93191494d4d9a0e3506003970083b4baebe35e8b71aba4651baa763514a00b29b260178604dcf43d024fbf8e4a81ffbefb70b11ae6e05dcb4e906b WHIRLPOOL 3c856829755fd3e0949e979a3129d57cc8c5b5d5d9f66fbfc19ae307bc77beee318c829c754735c15df852870cde10f72df1c1635b949e3fb85af17316274b61
 EBUILD dante-1.4.0_pre1.ebuild 2268 SHA256 41feb54e177142e8305fab8f6e2dcdf3397eefc86b12b23ffb35f2e5453ec364 SHA512 08f6bd423d644430ea19e0563738ba932ec48d996daa1a54cbc6bf5ed000054b6779e42e19e95f84266da98dd1ea8677e464807ed90c4da7457bd8453537e519 WHIRLPOOL ac6793acd2b41ccf4dc64ff70a947dfe830844aa48f57b99bae4e45a0c7a88b36c9532d93a209b9e66ace394185316b664037140b5c3bce4a9e0dc8e5dc697fb
-MISC ChangeLog 18759 SHA256 14150a553ec9c2161df0e2f466e04100b967c46202330f9e6c072e3e0d5dfa6b SHA512 0c98792a29ee8ce4c721b647f19c816a8237f52190cb954a87db96ea61d2bdd62b469b1e23d104b23f5b689474082948d314773bcaa6d7f24ed2e651665c2dd1 WHIRLPOOL ca50e4f21dc548c045390cf59ddf64f21f075e45e43d25fc80bfe150c85b5c5e30791094b9cb3696ce69ecd49b05c0beee89a3dbb8b65165961c1bb40ff7c7cc
+MISC ChangeLog 18991 SHA256 12141dfdbf8530557a73c7aa9535ad530f81d818c24657c99a0d61f69ce6c0a2 SHA512 c2bd69d5120a0e198b64aa9085844ea183320728267365d9769711186e783a97a97410af68dd4261021c8944dd91d6f4f0909b1a63fae94d80d4435cba0304b8 WHIRLPOOL ab38b9bfb090140bdb0e6a5a4d8d1292715ac063bdb298c0ff3943340882bd889332d63b558d0071d5557b71b4dbe5b809c4ad03853c9d512794b3858fe6c2fe
 MISC metadata.xml 246 SHA256 7302ea59a7112d51c6936fa5aa83204412d7391441c729a54de3651b81c35add SHA512 da5edb1cbf3b7e72b1bf22120bcc2efcc794e1e2f032e57426286de9817dba3ef39d95313dbee4cba51c0198f8b4297ac8f1d412335ee00d32e470799d05b7c4 WHIRLPOOL f5a9fd6f048d1732243da133861886c7a8ff3bd024ca831c98496d3150441512929c86bb263a8d89ff96ee5720dcc06c423227cdcc840a9062d9f8bcaf7197e2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTwlg+AAoJELp701BxlEWfClkQAJxXgfv6BX6XqeFqxPFNDg/4
-8gJqYiAOlkPz87AN/Fjx1lQTGcemStRw8pS4yQgqykIvu4jVdFKBbRWmClMW76Q8
-iF2oQGOmvTdgkkKsI3fN2Sjm+eVb1qiN+J8U8tVMqjeH+b1oY1H9ZCRlJDtL0hf9
-XkYPyBcbvQKVC+5jJYVwRWT/qpIXT4ERLy00jRSELkMDJVpzAgAS1fGryQya1jBH
-VxfL1/QLwttUbhvEFNrRv2yWhDBTCKr1skY8SYqXg8z2ni5AW8j3dWbEqfSne0oQ
-8+LzrhK270ANs+/YAL8FJyU3VJ8iqGy5ZV4EELsFREDdSV2Aal/vFdVaTLmMPAOV
-hTLZyMOe/J9DUVkU5UFLwNIRnZT7voxUeGrGMdrWnTzmLQMQ0pMRu1i1oFR0bE2i
-DClQ+PmSAU6054hUvxJXdezTVwHuyhOI8Wueg4mt3gdHscuWQc/yadDGWcWwFREj
-47+OC0IqlqCLJ//cwzJi7GCk1I1FSmxDh8CZfmI0OixNx4Mw5MaPVpaaOD13FgrH
-30l8WtY/pWP24Sd1Wc6AgKS4dp7oE6aPc6PRlvbemkEdyVmg1W2l8zz3iH6XGDsc
-fe3tvFhUTz8Yw8y2kWFrDWW6gzxOtx5eeG3sddCwXzn1pcBS9RJ9TKVp1rKmIqxP
-TywAvu0KbilKYHn9I1WS
-=eu5Q
+iQIcBAEBCgAGBQJT8ra5AAoJEKXdFCfdEflKWoMP/2bDPQIoTlufLwDbJOyLy8AD
+UX4/aObJSGqeTk+36U6xRLqdxbP/wD3wSlMx9QVPDPqSusWw6+RncIkDbTsbUnjD
+l6VtdfqVolZemwbxfm0yfIcpsIBHkkhRJv8IlryOseJfMBUFYLfH2dzRA7dnvA7j
+1jOAZ8xYLli5/00k1cCmnwcRPGMd1XqgDOoWlN7ajhUz2cXXd9a4CJqWHgceqWK3
+Z2DHx0dcNE9D7V5gz79hvCmklFzQdvneDKvPW+T1yFfnx6GHx4Oq7TcSvLFIZnwq
+oBR4RxUgg5ZQkWeLX+znLmS9P6uDzUa3ncPoRTKve453lp9K3a8AUI3ElPTj/mZR
+bggvLYsTFSaaCM0CrnskaYCU41vI09VHxL7wmUDv+HoGZvG12wdKzn20138DVlTH
+QpkAxbFp7TPgSBWEAMhji0NSMKPKDrbSIHbsiXWElbXjIjly+OvVDPBXiziQgzBL
+ur+vKYFpwT2yvAcYM0HWU8Dbba4EVzGQx2xLPiIBoC83LS3iMQ8zCuBsFRnDWSCw
+Vrv4+yXpapJdqoOr5oizRkmGyDypj/gRJy3F6UsNCeLyNSDu61yLQf6j9jnH/Xu0
+7abb5WfHBFoK5XWZFaSsqIPwcxllpDsbtm49vBCLHpB8kfUPcahsaCDYvekqfhHS
+lnTR5MjtOcl2Ux9YjRve
+=VTup
 -----END PGP SIGNATURE-----
